<resources>
    <string name="app_name">influxdbdroneapp</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="your_bucket">Your bucket</string>
    <string name="organisation">organisation</string>
    <string name="influx_key">Influx_key</string>
    <string name="submit">Submit</string>
    <string name="server_url_without_http">server_url(without http://)</string>
</resources>